# latte

./: .gitignore  Cargo.toml  LICENSE  README.md  todo.txt
src/: cli.rs  config.rs  errors.rs  main.rs  models.rs  storage.rs
src/commands/: add.rs  cleanup.rs  edit.rs  list.rs  mod.rs  search.rs  summary.rs
src/db/: connection.rs  entities.rs  entries.rs  maintenance.rs  metadata.rs  migrations.rs  mod.rs  schema.sql  tasks.rs
src/ui/: completion.rs  fuzzy.rs  guard.rs  header.rs  mod.rs  prompts.rs  tables.rs  util.rs
