[package]
name = "latte"
version = "0.0.1"
edition = "2024"
authors = ["Sam Eary <samwise342@gmail.com>"]
description = "Lattice Automated Tracking & Terminal Entries"
repository = "https://github.com/SEary342/latte"
license = "MIT"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = {version = "0.12.0", features = ["completion"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tabled = "0.20.0"
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
rusqlite = { version = "0.39.0", features = ["bundled", "chrono", "uuid"] }
directories = "6.0.0"

